# backend

boiler-backend-eks/: docker-compose.yml
boiler-backend-eks/backend/: pyproject.toml
boiler-backend-eks/backend/app/: main.py
boiler-backend-eks/backend/app/api/: deps.py
boiler-backend-eks/backend/app/api/api_v1/: api.py
boiler-backend-eks/backend/app/api/api_v1/endpoints/: graph.py  permissions.py  role.py  users.py
boiler-backend-eks/backend/app/core/: security.py
boiler-backend-eks/backend/app/db/: session.py
boiler-backend-eks/backend/app/db/migrations/versions/: 2081214b4192_create_role_table.py  668c8cd1e4c9_create_user_table.py  a543de78acda_create_module_table.py
boiler-backend-eks/backend/app/db/models/: __init__.py  logging.py  module.py  role.py  user.py  user_location.py  user_role.py
boiler-backend-eks/backend/app/db/repositories/: __init__.py  base.py  crud_role_permissions.py  crud_user.py  crud_user_role.py
boiler-backend-eks/backend/app/db/schemas/: module.py  user.py  user_role.py
boiler-backend-eks/backend/app/lib/: util_mail.py
boiler-backend-eks/backend/app/lib/integrations/: util_protyre.py
boiler-backend-eks/backend/app/templates/: base.html.j2  verification.html.j2
boiler-backend-eks/backend/app/tests/: conftest.py  test_login.py  test_permissions.py  test_roles.py  test_rolesPermission.py
boiler-backend-eks/backend/filebeat/: filebeat.yml
boiler-backend-eks/backend/metricbeat/: metricbeat.yml
boiler_backend_prometheus/: .gitignore  README.md  docker-compose.yml
boiler_backend_prometheus/backend/app/: main.py  (+2 more)
(+29 files in other folders)
