[tool.poetry]
name = "fastapi_sqlalchemy_async"
version = "2.0.0"
description = ""
authors = ["John Lenon <john.lenon@smarti.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.101.1"
uvicorn = "^0.13.3"
alembic = "^1.4.3"
SQLAlchemy = "2.0.20"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
pydantic = {extras = ["email"], version = "^1.7.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.2.0"
python-multipart = "^0.0.5"
gunicorn = "^20.0.4"
httptools = "^0.1.1"
inflect = "^4.1.0"
boto3 = "^1.26.56"
celery = "^4.4.6"
fastapi-redis-cache = "^0.2.5"
redis = "^4.5.5"
requests = "^2.31.0"
fastapi-mail = "*"
Jinja2 = "^3.1.2"
uvloop = "^0.17.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.29.2"}
[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
